# eddl

./: .clang-format  .clang-tidy  .coveragerc  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.clion.txt  CMakeLists.txt  CMakeLists2.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Installation.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  TODO.txt  cluster.altec  codecov.yml  development.md  eddl_progress.html  eddl_progress.md  eddl_progress_documentation.md  eddl_progress_tensor.md  environment-cpu.yml  environment-cudnn.yml  environment-gpu.yml  environment.yaml  environment.yml  example_ae  example_conv  example_dae  example_dae_class  example_load_save  example_mlp  (+14 more)
cmake/: CMakeExternalConfig.cmake.in  CMakeLists.txt  EDDLConfig.cmake.in  boost.CMakeLists.txt  eddlConfig.cmake.in  eigen.CMakeLists.txt  eigen.CMakeLists.txt.in  eigen.cmake  googletest.CMakeLists.txt.in  googletest.cmake  gtest.CMakeLists.txt  openssl.CMakeLists.txt.in  protobuf.CMakeLists.txt  protobuf.CMakeLists.txt.in  protobuf.cmake  pthreads4w.CMakeLists.txt.in  zlib.CMakeLists.txt  zlib.CMakeLists.txt.in  zlib.cmake
examples/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  eddl_ae.cpp  eddl_conv.cpp  eddl_dae.cpp  eddl_dae_class.cpp  eddl_gpu.cpp  eddl_load_save.cpp  eddl_mlp.cpp  eddl_predict.cpp  eddl_temp.cpp  eddl_tensor.cpp  eddl_test.cpp  eddl_test_conv.cpp  eddl_train_batch.cpp
examples/MNIST/: Makefile  test_eddl_conv.cpp  test_eddl_mlp.cpp  test_wrapper_conv.cpp  test_wrapper_mlp.cpp
examples/NN/: eddl_ae.cpp  eddl_conv.cpp  eddl_dae.cpp  eddl_load_save.cpp  eddl_mlp.cpp  eddl_predict.cpp  eddl_train_batch.cpp
examples/Tensor/: eddl_image.cpp  eddl_io.cpp  eddl_tensor.cpp  eddl_tests.cpp  profiling_kernel.cpp  verify_kernel.cpp
examples/applications/: 1_image_classification_resnet34.cpp  app_test_model.cpp
examples/cc/: eddl_conv.cpp  eddl_mlp.cpp
examples/data/: iris.csv  iris.npy  iris.tsv  iris.txt
examples/fpga/: example1.cpp  example2.cpp  example3.cpp
examples/onnx/: 1_onnx_file.cpp  1_onnx_pointer.cpp  2_onnx_save_net_to_file.cpp  3_onnx_import_net_from_file.cpp  4_onnx_test_gradients.cpp  4_onnx_utils_serialization.cpp  4_utils_serialization.cpp  5_onnx_import_net_and_reshape.cpp  6_onnx_predict.cpp  7_onnx_import_net_and_predict.cpp  7_onnx_test_gradients_recurrent.cpp  tests_export.cpp
examples/python/: basic.py
examples/tensor/: eddl_dev_tests.cpp  eddl_image.cpp  eddl_io.cpp  eddl_ops.cpp  eddl_tensor.cpp  eddl_tests.cpp  eddl_tests_dev.cpp
examples/test_internals/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
runtime/: CMakeLists.txt
runtime/distributed/: master.cpp  misc_info.cpp  worker.cpp
src/: .gitignore  CMakeLists.txt  binding.cpp  callbacks.h  compserv.cpp  compserv.h  dense.cpp  dense.h  eddl.cpp  eddl.h  helpers.cpp  helpers.h  initializer.cpp  initializer.h  initializers.h  layer.cpp  layer.h  layer_activation.cpp  layer_add.cpp  layer_dense.cpp  layer_input.cpp  layer_tensor.cpp  loss.cpp  loss.h  metric.cpp  metric.h  net.cpp  net.h  optim.cpp  optim.h  profiling.cpp  random.cpp  random.h  system_info.h  tensor.cpp  tensor.h  tensor_op.cpp  tensor_over.h  utils.cpp  utils.h  (+2 more)
src/apis/: binder.cpp  binder.h  eddl.cpp  eddl.h  eddlT.cpp  eddlT.h  fpga.cpp  fpga2.cpp  model_for_fpga.cpp  wrapper.cpp  wrapper.h
src/callbacks/: callbacks.h
src/constraints/: constraint.h  constraint_max_norm.cpp  constraint_min_max_norm.cpp  constraint_non_neg.cpp  constraint_unit_norm.cpp
src/cpu/: cpu_convol.cpp  cpu_convol.h
src/descriptors/: ._descriptor_conv.cpp  .descriptor_conv.cpp.swp  .descriptor_convT.cpp.swp  descriptor_conv.cpp  descriptor_conv2D.cpp  descriptor_conv3D.cpp  descriptor_convT.cpp  descriptor_convT2D.cpp  descriptor_convT3D.cpp  descriptor_expand.cpp  descriptor_gather.cpp  descriptor_permute.cpp  descriptor_pool.cpp  descriptor_pool2D.cpp  descriptor_pool3D.cpp  descriptor_reduce.cpp  descriptor_reduce2.cpp  descriptor_reduce_legacy.cpp  descriptor_repeat.cpp  descriptor_select.cpp  descriptor_tensor.cpp  descriptor_tile.cpp  descriptors.h  tensor_descriptors.h
src/distributed/: README.md
src/fpga/: README.md
src/gpu/: tensor_cuda.cu  tensor_cuda.h  tensor_cuda_op.cu  tensor_cuda_op.h  tensor_kernels.cu  tensor_kernels.h
src/initializers/: initializer.cpp  initializer.h  initializer_constant.cpp  initializer_glorot_normal.cpp  initializer_glorot_uniform.cpp  initializer_he_normal.cpp  initializer_he_uniform.cpp  initializer_indentity.cpp  initializer_orthogonal.cpp  initializer_random_normal.cpp  initializer_random_uniform.cpp  initializer_truncated_normal.cpp  initializer_variance_scaling.cpp
src/layers/: CMakeLists.txt  layer.cpp  layer.h  layer_activation.cpp  layer_add.cpp  layer_average.cpp  layer_batchnorm.cpp  layer_cat.cpp  layer_conv.cpp  layer_dense.cpp  layer_drop.cpp  layer_embedding.cpp  layer_input.cpp  layer_lstm.cpp  layer_matmul.cpp  layer_maximum.cpp  layer_minimum.cpp  layer_noise.cpp  layer_pool.cpp  layer_reshape.cpp  layer_rnn.cpp  layer_subtract.cpp  layer_tensor.cpp  layer_transpose.cpp
src/losses/: loss.cpp  loss.h  loss_binary_cross_entropy.cpp  loss_categorical_cross_entropy.cpp  loss_cross_entropy.cpp  loss_dice.cpp  loss_full_cross_entropy.cpp  loss_hinge.cpp  loss_mae.cpp  loss_mean_squared_error.cpp  loss_min.cpp  loss_mre.cpp  loss_mse.cpp  loss_msle.cpp  loss_soft_cross_entropy.cpp
src/metrics/: metric.cpp  metric.h  metric_binary_accuracy.cpp  metric_categorical_acc.cpp  metric_dice.cpp  metric_mean_absolute_error.cpp  metric_mean_relative_error.cpp  metric_mean_squared_error.cpp  metric_sum.cpp
src/mpi_distributed/: data_generator.cpp  mpi_distributed.cpp
src/net/: compserv.cpp  compserv.h  net.cpp  net.h  net_api.cpp  net_build.cpp  net_func.cpp  net_unroll.cpp  netloss.cpp  netloss.h
src/optimizers/: optim.cpp  optim.h  optim_adadelta.cpp  optim_adagrad.cpp  (+5 more)
tests/: CMakeLists.txt  test_avgpool.cpp  test_convol.cpp  test_main.cpp  test_mpool.cpp  test_onnx.cpp  test_tensor.cpp  test_tensor_io.cpp
(+1631 files in other folders)
